--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,12 @@ img {
 
 /* ============== HERO 1 SECTION ============== */
 .main-section {
-    background-color: #2e2f42;
     padding: 188px 0;
-    
+    background-color: #2e2f42;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70),
+    rgba(46, 47, 66, 0.70)),
+    url("../images/hero/hero-bg.jpg");
+    background-size: cover;
 }
 
 .main-title {
