--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,11 @@ img {
     background-image: linear-gradient(rgba(46, 47, 66, 0.70),
     rgba(46, 47, 66, 0.70)),
     url("../images/hero/hero-bg.jpg");
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
+
 }
 
 .main-title {
@@ -189,6 +193,8 @@ img {
     height: 56px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms 
+    cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-order-services:hover,
