--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,10 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+     0px 1px 1px rgba(46, 47, 66, 0.16), 
+     0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .page-navigation {
@@ -119,8 +123,23 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 24px 0;
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
+  .menu-link-studio {
+    color: #404BBF;
+    position: relative;
+  }
+
+  .menu-link-studio::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 48px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .menu-link:hover,
@@ -132,9 +151,7 @@ img {
     font-style: normal;
     display: flex;
     align-items: center;
-
-    
- }
+}
 
 .contacts-list {
     display: flex;
@@ -147,6 +164,7 @@ img {
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .contacts-link:hover,
