--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,12 @@ img {
 /* ============== HEADER ============== */
 
 .header {
+    max-width: 1440px;
+    margin: 0 auto;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
      0px 1px 1px rgba(46, 47, 66, 0.16), 
      0px 1px 6px rgba(46, 47, 66, 0.08);
-
 }
 
 .page-navigation {
@@ -174,6 +175,7 @@ img {
 
 /* ============== HERO 1 SECTION ============== */
 .main-section {
+    margin: 0 auto;
     padding: 188px 0;
     background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.70),
