--- a/css/styles.css
+++ b/css/styles.css
@@ -335,7 +335,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: background-color 250ms
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon-link:hover,
