--- a/css/styles.css
+++ b/css/styles.css
@@ -356,22 +356,50 @@ img {
 }
 
 .our-portfolio-list {
-display: flex;
-flex-wrap: wrap;
-column-gap: 24px;
-row-gap: 48px;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
 }
 
 .our-portfolio-list-item {
 width: calc((100% - 48px) / 3);
 }
 
-.container-portfolio-title-text {
-padding: 32px 16px;
-border: 1px solid #e7e9fc;
-border-top: none;
+.container-portfolio-transform {
+    position: relative;
+    overflow: hidden;
 
 }
+
+.container-transform-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    background-color: #4D5AE5;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.container-portfolio-title-text {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-portfolio-list-item:hover,
+.our-portfolio-list-item:focus {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
+}  
 
 .our-portfolio-list-title {
     color: #2E2F42;
