--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,6 @@ img {
 /* ============== OUR TEAM 3 SECTION ============== */
 /* ============== OUR PORTFOLIO 4 SECTION ============== */
 
-
 .our-portfolio-title {
     margin-bottom: 72px;
 }
@@ -363,16 +362,20 @@ img {
 }
 
 .our-portfolio-list-item {
-width: calc((100% - 48px) / 3);
+    width: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.container-portfolio-transform {
+.our-portfolio-list-item:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.overlay {
     position: relative;
     overflow: hidden;
-
 }
 
-.container-transform-text {
+.overlay-text {
     position: absolute;
     top: 0;
     font-size: 16px;
@@ -385,21 +388,17 @@ width: calc((100% - 48px) / 3);
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-}
+    .our-portfolio-list-item:hover .overlay-text {
+    transform: translateY(0%);
+    }
 
 .container-portfolio-title-text {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.our-portfolio-list-item:hover,
-.our-portfolio-list-item:focus {
-    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
-    transform: translateY(0%);
-}  
+    }
 
 .our-portfolio-list-title {
     color: #2E2F42;
@@ -416,6 +415,7 @@ width: calc((100% - 48px) / 3);
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
 /* ============== OUR PORTFOLIO 4 SECTION ============== */
 /* ============== FOOTER ============== */
 
