--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,15 @@ img {
     padding: 100px 0;
 }
 
+.container-footer {
+   display: flex; 
+   align-items: baseline;
+}
+
+.container-footer-logo {
+    margin-right: 120px;
+}
+
 .logo-footer {
     display: inline-block;
     margin-bottom: 16px;
@@ -446,4 +455,40 @@ img {
     letter-spacing: 0.02em;
     width: 264px;
     
+}
+
+.footer-social-media {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+}
+
+.footer-social-list-icon {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-social-item {
+    width: 40px;
+    height: 40px;
+    
+}
+
+.footer-social-icon-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-icon-link:hover,
+.footer-social-icon-link:focus {
+    background-color: #31d0aa;
 }
